[package]
name = "biney"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout = "3.0.0"
clap = { version = "3.1.15", features = ["derive"] }
color-eyre = "0.6.1"
parse-display = "0.5.5"
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
